--- a/styles.css
+++ b/styles.css
@@ -209,34 +209,53 @@ h1 {
 
 @media (max-width: 768px) {
     .container {
-        width: 90%;
-        padding: 2rem 1rem;
+        width: 70%;
+        padding: 1.5rem;
+        max-width: 420px;
     }
     
-    .coming-soon {
-        font-size: 2rem;
-    }
-    
-    .social-icon {
-        width: 40px;
-        height: 40px;
-        font-size: 1.2rem;
-    }
-
-    .brand {
-        flex-direction: column;
-        gap: 0.5rem;
-    }
-
-    .brand-name {
-        text-align: center;
+    .logo {
+        max-width: 70px;
     }
 
     h1 {
-        font-size: 2.8rem;
+        font-size: 2.45rem;
     }
 
-    .clicks, .agency {
-        font-size: 1.4rem;
+    .agency {
+        font-size: 0.77rem;
+    }
+    
+    .coming-soon {
+        font-size: 1.5rem;
+        margin: 0.5rem 0;
+    }
+
+    .contact-heading {
+        font-size: 0.9rem;
+        margin-top: 1.5rem;
+        margin-bottom: 0.5rem;
+        margin-left: 0rem;
+        margin-right: 0rem;
+    }
+    
+    .social-icon {
+        width: 35px;
+        height: 35px;
+        font-size: 1rem;
+    }
+
+    .brand {
+        flex-direction: row;
+        gap: 0.7rem;
+        margin-bottom: 1.4rem;
+    }
+
+    .brand-name {
+        text-align: left;
+    }
+
+    .social-links {
+        gap: 1rem;
     }
 } 
